console.log('üéØ Updated /agreements/all Route Summary');
console.log('=========================================');
console.log('');
console.log('‚úÖ What it now returns:');
console.log('- Only ACTIVE agents by default (can filter by status)');
console.log('- Full agreement details with IDs');
console.log('- Source company information for each agreement');
console.log('- User and agreement counts');
console.log('- Requires ADMIN role');
console.log('');
console.log('üìã Response Structure:');
console.log(JSON.stringify({
  "items": [
    {
      "id": "agent_id",
      "companyName": "Agent Company Name",
      "email": "agent@example.com",
      "status": "ACTIVE",
      "createdAt": "2025-10-08T...",
      "updatedAt": "2025-10-08T...",
      "adapterType": "mock",
      "grpcEndpoint": null,
      "_count": {
        "users": 1,
        "agentAgreements": 2
      },
      "agentAgreements": [
        {
          "id": "agreement_id",
          "agreementRef": "AG-2025-001",
          "status": "ACTIVE",
          "validFrom": "2025-01-01T00:00:00Z",
          "validTo": "2025-12-31T23:59:59Z",
          "sourceId": "source_id",
          "source": {
            "id": "source_id",
            "companyName": "Source Company",
            "status": "ACTIVE"
          }
        }
      ]
    }
  ],
  "total": 3,
  "filters": {
    "status": "ACTIVE",
    "type": "AGENT"
  }
}, null, 2));
console.log('');
console.log('üöÄ Usage:');
console.log('GET /agreements/all - Get all ACTIVE agents with agreements');
console.log('GET /agreements/all?status=PENDING_VERIFICATION - Filter by status');
console.log('');
console.log('üîê Security:');
console.log('- Requires authentication');
console.log('- Requires ADMIN role');
console.log('- Returns comprehensive agent and agreement data');
